Attempt to fix style bugs causing overflow issues

--- a/public/static/styles/App.scss
+++ b/public/static/styles/App.scss
@@ -15,6 +15,10 @@ body {
   font-family: "Poppins", serif;
 }
 
+div {
+  overscroll-behavior: none;
+}
+
 #__next {
   display: flex;
   flex-direction: column;
