--- a/src/components/Group/Thread/thread.module.scss
+++ b/src/components/Group/Thread/thread.module.scss
@@ -132,12 +132,9 @@
 .root {
   position: relative;
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   background: $background;
-  overflow-x: hidden;
-  overflow-y: auto;
 
   > * {
     flex-shrink: 0 !important;
